[gd_scene load_steps=7 format=3 uid="uid://drcnw6j68up2h"]

[ext_resource type="Texture2D" uid="uid://dpvctosm6vhgx" path="res://sprite/Pause.png" id="1_cqku2"]
[ext_resource type="Script" path="res://src/hud.gd" id="1_g6yjv"]
[ext_resource type="Texture2D" uid="uid://dxrw24ka4khg5" path="res://sprite/Pause_Clicked.png" id="2_b5dv4"]
[ext_resource type="Script" path="res://src/counting_timer.gd" id="3_2hmli"]
[ext_resource type="PackedScene" uid="uid://xw3q4ofcj7dm" path="res://scene/settings_menu.tscn" id="4_adfny"]

[sub_resource type="LabelSettings" id="LabelSettings_utsxt"]
font_size = 48

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_g6yjv")

[node name="PauseButton" type="TextureButton" parent="."]
process_mode = 1
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 8.0
offset_right = -56.0
offset_bottom = 24.0
grow_horizontal = 0
scale = Vector2(4, 4)
focus_mode = 0
texture_normal = ExtResource("1_cqku2")
texture_pressed = ExtResource("2_b5dv4")

[node name="TimerLabel" type="Label" parent="."]
process_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 8.0
offset_right = -92.0
offset_bottom = 75.0
grow_horizontal = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_utsxt")
script = ExtResource("3_2hmli")

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="PauseMenu/PauseMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="SettingsButton" type="Button" parent="PauseMenu/PauseMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="MainMenuButton" type="Button" parent="PauseMenu/PauseMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/PauseMenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="SettingsMenu" parent="PauseMenu" instance=ExtResource("4_adfny")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -152.0
offset_right = 298.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/PauseMenuContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/PauseMenuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenu/PauseMenuContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/PauseMenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="save" from="PauseMenu/SettingsMenu" to="." method="_on_settings_menu_save"]
